--- a/_posts/2022-06-04-120-walk-lab.markdown
+++ b/_posts/2022-06-04-120-walk-lab.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "McNeil Walking Robotics Lab"
 date:   2022-06-04 14:29:23 -0400
-audio_id: audio tour location 120
+audio_id: audio location 120
 ---
 
 ![Digit robot on the treadmill](/assets/images/120-walk-lab.jpg)
