--- a/_posts/2022-06-04-130-rehab-lab.markdown
+++ b/_posts/2022-06-04-130-rehab-lab.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Rehabilitation Lab"
 date:   2022-06-02 14:29:23 -0400
-audio_id: audio tour location 130
+audio_id: audio location 130
 ---
 ![Open-source bionic leg](/assets/images/130-rehab-lab.jpg)
 
