--- a/_posts/2022-06-04-140-robot-garden.markdown
+++ b/_posts/2022-06-04-140-robot-garden.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Robot Garden"
 date:   2022-06-01 14:29:23 -0400
-audio_id: audio tour location 140
+audio_id: audio location 140
 ---
 
 <div class="audio-player">
