--- a/_posts/2022-06-04-160-makerspace.markdown
+++ b/_posts/2022-06-04-160-makerspace.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Makerspace"
 date:   2022-05-31 14:29:23 -0400
-audio_id: audio tour location 160
+audio_id: audio location 160
 ---
 
 <div class="audio-player">
