--- a/_posts/2022-06-04-170-mars-yard.markdown
+++ b/_posts/2022-06-04-170-mars-yard.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Mars Yard"
 date:   2022-05-30 14:29:23 -0400
-audio_id: audio tour location 170
+audio_id: audio location 170
 ---
 
 <div class="audio-player">
