--- a/_posts/2022-06-04-210-rob-550.markdown
+++ b/_posts/2022-06-04-210-rob-550.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "ROB 550 Lab"
 date:   2022-05-28 14:29:23 -0400
-audio_id: audio tour location 210
+audio_id: audio location 210
 ---
 
 <div class="audio-player">
