--- a/_posts/2022-06-04-100-atrium.markdown
+++ b/_posts/2022-06-04-100-atrium.markdown
@@ -5,7 +5,7 @@ date:   2022-06-06 14:29:23 -0400
 audio_id: audio location 100
 accordion: 
   - title: audio transcript
-    content: <p>Welcome to the Ford Motor Company Robotics Building!</p><p>Here, students, staff and faculty work together under one roof to drive the field of robotics toward a future that puts people, not just technology, first. While exploring our new space, we’ve set up a self-guided tour of the highlights around and outside the 134,000-square-foot building, just look for signs like this one!</p><p>You are in the atrium, a place where students and faculty come together to work on problems, test out solutions, and celebrate community successes over coffee. From here, you can see many of the places we’ll go to on this tour, but did you know not all robotics faculty are in this building? A few faculty have labs elsewhere on campus, such as Professor Cindy Chestek’s Cortical Neural Prosthetics Lab, where they work on upper limb prosthetics that can be controlled by signals from the brain. Meet one robotics master’s student who works in this lab: Christian Leonard.</p>I work in the Cortical Neuroprosthetics Lab, run by Dr. Cindy Chestek. As part of the Translational Neuro Engineering Group here in Michigan, our lab's focus combines neuroscience and engineering methodologies to develop clinically viable machines that interface with the brain. Our goal is to provide paralyzed individuals the ability to control prosthetic limbs as well as their own limbs, using functional electrical stimulation and assistive exoskeletal systems. With so many specialties and labs to choose from within the robotics program, I chose Dr. Chestek's Lab because of the impact these technologies can have on people, both providing them a greater sense of independence and improved quality of life.</p><p>This subject also happens to hit very close to home for me. In August of 2019, my family and I were hit by a drunk driver early one morning as a result of our crash, my mother suffered extensive damage to her left arm. Many surgeries later, and my mother still has extremely limited mobility in her wrist and hand as well as daily chronic pain.</p><p>She has been told repeatedly that currently, nothing additional can be done to advance her arm past where it is in terms of her range of motion or her pain levels. Now, brain machine interfaces such as the ones being developed in our lab could very well be the answer that we didn't know we were looking for. The promising innovations made in the field of neuroengineering proved to be a spring of hope in the lives of those whose hope had previously dried up. In the future, I'm confident that neurotechnologies will allow us to not only better understand the brain, but to fight back against some of humanity's greatest challenges. In fact, I believe we are just getting started.</p>
+    content: "<p>Welcome to the Ford Motor Company Robotics Building!</p><p>Here, students, staff and faculty work together under one roof to drive the field of robotics toward a future that puts people, not just technology, first. While exploring our new space, we’ve set up a self-guided tour of the highlights around and outside the 134,000-square-foot building, just look for signs like this one!</p><p>You are in the atrium, a place where students and faculty come together to work on problems, test out solutions, and celebrate community successes over coffee. From here, you can see many of the places we’ll go to on this tour, but did you know not all robotics faculty are in this building? A few faculty have labs elsewhere on campus, such as Professor Cindy Chestek’s Cortical Neural Prosthetics Lab, where they work on upper limb prosthetics that can be controlled by signals from the brain. Meet one robotics master’s student who works in this lab, Christian Leonard.</p><p>I work in the Cortical Neuroprosthetics Lab, run by Dr. Cindy Chestek. As part of the Translational Neuro Engineering Group here in Michigan, our lab's focus combines neuroscience and engineering methodologies to develop clinically viable machines that interface with the brain. Our goal is to provide paralyzed individuals the ability to control prosthetic limbs as well as their own limbs, using functional electrical stimulation and assistive exoskeletal systems. With so many specialties and labs to choose from within the robotics program, I chose Dr. Chestek's Lab because of the impact these technologies can have on people, both providing them a greater sense of independence and improved quality of life.</p><p>This subject also happens to hit very close to home for me. In August of 2019, my family and I were hit by a drunk driver early one morning as a result of our crash, my mother suffered extensive damage to her left arm. Many surgeries later, and my mother still has extremely limited mobility in her wrist and hand as well as daily chronic pain.</p><p>She has been told repeatedly that currently, nothing additional can be done to advance her arm past where it is in terms of her range of motion or her pain levels. Now, brain machine interfaces such as the ones being developed in our lab could very well be the answer that we didn't know we were looking for. The promising innovations made in the field of neuroengineering proved to be a spring of hope in the lives of those whose hope had previously dried up. In the future, I'm confident that neurotechnologies will allow us to not only better understand the brain, but to fight back against some of humanity's greatest challenges. In fact, I believe we are just getting started.</p>"
 ---
 
 <div class="audio-player">
