--- a/_posts/2022-06-04-310-robot-teams.markdown
+++ b/_posts/2022-06-04-310-robot-teams.markdown
@@ -5,7 +5,7 @@ date:   2022-05-22 14:29:23 -0400
 audio_id: audio location 310
 accordion: 
   - title: audio transcript
-    content: <p>So planning and control under uncertainty is a longstanding topic within robotics and artificial intelligence, the controls communities. Let's consider that we have quad rotor that has to navigate in an environment. So there are obstacles like physical obstacles: the buildings, there might be other quad rotors navigating also around, and it also has to navigate in the presence of processes like, for example, wind.</p><p>So the quad rotor has imperfect information about the environment and it has to make decisions on, for example, whether it's safe to go through this path or it should be better to go around the obstacles. So that it keeps a safe distance with respect to the obstacles and using information about the wind that it doesn't directly measure that it has to estimate on the fly.</p><p>So that creates a problem of safety under uncertainty. And the questions that that are related to this problem would be how we can ensure that the system trajectories will always remain safe in an unknown environment, in an environment that we might not know exactly the location of the obstacles or the wind that is affecting the motion of the vehicle.</p>
+    content: "<p>So planning and control under uncertainty is a longstanding topic within robotics and artificial intelligence, the controls communities. Let's consider that we have quad rotor that has to navigate in an environment. So there are obstacles like physical obstacles--the buildings, there might be other quad rotors navigating also around, and it also has to navigate in the presence of processes like, for example, wind.</p><p>So the quad rotor has imperfect information about the environment and it has to make decisions on, for example, whether it's safe to go through this path or it should be better to go around the obstacles. So that it keeps a safe distance with respect to the obstacles and using information about the wind that it doesn't directly measure that it has to estimate on the fly.</p><p>So that creates a problem of safety under uncertainty. And the questions that that are related to this problem would be how we can ensure that the system trajectories will always remain safe in an unknown environment, in an environment that we might not know exactly the location of the obstacles or the wind that is affecting the motion of the vehicle.</p>"
 ---
 
 <div class="audio-player">
@@ -15,6 +15,8 @@ accordion:
 ![Three autonomous ground vehicles work together as they move](/assets/images/310-robot-teams.jpg)
 
 Robots that fly have much shorter times to safely react to an event, whether they are constrained by their battery, safe flight paths or landing zones, or even weather. In the Distributed Aerospace Systems and Control (DASC) and Vehicle Optimization, Dynamics, Control & Autonomy (VODCA) Laboratories, researchers address these real-world, safety and time critical problems in autonomous vehicles systems, and not just in flight, but in water, on the ground, and all the way up into space. Through proper planning and control, one or even networks of robots, swarms of drones, or fleets of autonomous vehicles can safely meet their goals, even if one of those robots goes haywire, is hacked, or encounters rough weather.
+
+{% include accordion.html %}
 
 ## Related
 * [DASC Lab](http://www-personal.umich.edu/~dpanagou/labs/index.html)
