updating social sharing

--- a/_posts/2022-06-04-160-makerspace.markdown
+++ b/_posts/2022-06-04-160-makerspace.markdown
@@ -6,6 +6,7 @@ audio_id: audio location 160
 accordion: 
   - title: audio transcript
     content: "<p>Getting hands-on with hardware is a big part of robotics.</p><p>This 2,600-square-foot on-site shop helps ground students in fabricating hardware. It’s outfitted with a complete set of shop tools, like a drill press, and the latest advanced equipment that includes 3D printers, laser cutters, CNC router, waterjet, a mill, a lathe, and a welding station that makes on-site robot building and maintenance an easy task.</p><p>What’s a day like in the robotics makerspace? Let’s listen to technician Alyssa Emigh.</p><p>I am responsible for the everyday operations and maintenance of the makerspace. My day to day can be anything from fixing machines to helping students, working with faculty to help with their labs or just whatever this place needs from me that day.</p><p>My background is a bit unique, before I started at UMich, I was in the entertainment industry building puppets, costumes, animatronics and static figures for high end clients all on a global scale. That being said, I feel like I see a different potential in robotics. So puppetry is actually very near and dear to me and at its core it is one of the oldest forms of entertainment and storytelling in the world. Personally, I think robots are high tech puppets, objects able to portray life through movement, audio and interaction. In my experience, I have seen and in some cases helped build, major breakthroughs where robots imitate life in a way that people can connect to them in ways never thought possible before.</p><p>When we think of robots, we often associate them with medical, manufacturing, research or defense purposes. My hope is that the continuing advancements in robotics can meld in together with puppetry to create truly unique and intimate experiences for those who may be watching. An experience that mimics life and story in a way that leaves people curious, inspired and excited.</p><p>Working at the makerspace, I have the opportunity to help students grow and develop the tangible skill sets they need. While they do keep me on my toes, I find it fascinating and rewarding to work with people who want to grow and continue learning outside of their classroom. Something else I really like about this position is, I'm learning just as much from them as they are from me. These people are so smart, almost intimidatingly so and being a part of their journey is really cool to me.Overall, getting an opportunity to share what I know coming from such a weird background is simultaneously near overwhelming and humbling. Seeing that spark of inspiration and understanding is a great feeling and ultimately at the end of the day it lets me know that I did my job.</p>"
+og_audio: "/assets/audio/160-makerspace.mp3"
 ---
 
 <div class="audio-player">
